# YFin

./: .gitignore  DS2010_Final.ipynb  DS2010_Final_original.ipynb  README.md  build_nb.py  pyproject.toml  requirements.txt
finbench/: __init__.py  benchmark.py  config.py  data.py  features.py  logging_utils.py  metrics.py  panel.py  walkforward.py
finbench/models/: __init__.py  classical.py  mlp.py  sequence.py  world_model.py
results/: benchmark_results.csv  config_snapshot.json  report.txt  run_manifest.json  walkforward_report.txt  walkforward_results.csv
scripts/: 01_download_data.py  02_build_panels.py  03_run_benchmark.py  04_walkforward.py  run_all.py
slurm/: prestage_data.sh  run_pipeline.sbatch  setup_env.sh
